# queuebridge

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  publish.yml  sync-labels.yml
docs/: Makefile  conf.py  cookbook.rst  faq.rst  getting-started.rst  index.rst  installation.rst  security.rst
docs/api/: index.rst
docs/concepts/: how-it-works.rst  why-not-celery-pydantic.rst  wire-format.rst
docs/tutorials/: arq.rst  celery.rst  dramatiq.rst
examples/: models.py  smoke_test_complex.py
examples/arq_example/: worker.py
examples/celery_fastapi/: app.py  docker-compose.yml  worker.py
examples/dramatiq_example/: run.py
pypi_verify/: run_complex.py
src/queuebridge/: __init__.py  codec.py  hints.py  types.py
src/queuebridge/arq/: __init__.py  install.py  serializer.py
src/queuebridge/celery/: __init__.py  install.py  result.py  serializer.py
src/queuebridge/dramatiq/: __init__.py  encoder.py
tests/: models.py  test_arq_integration.py  test_celery_integration.py  test_codec.py  test_dramatiq_integration.py  test_hints.py
