[project]
name = "queuebridge"
version = "0.1.2"
description = "Bidirectional Pydantic serialization for Celery, Dramatiq, and Arq"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.5",
    "typing-extensions>=4.8",
]

[project.optional-dependencies]
celery = ["celery>=5.5", "kombu>=5.3"]
dramatiq = ["dramatiq>=1.14"]
arq = ["arq>=0.25", "msgpack>=1.0"]
all = ["queuebridge[celery,dramatiq,arq]"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "fakeredis>=2", "httpx>=0.27", "ruff>=0.4", "mypy>=1.8"]
docs = ["sphinx>=7", "furo>=2024", "sphinx-autodoc-typehints>=2.0"]

[project.urls]
Homepage = "https://github.com/false200/queuebridge"
Documentation = "https://queuebridge.readthedocs.io"
Issues = "https://github.com/false200/queuebridge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/queuebridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["kombu.*", "celery.*", "msgpack", "msgpack.*"]
ignore_missing_imports = true
